tests/frontend/fail/array/array_mapping_assignment.act
constructor of B
interface constructor()

creates

  uint[2] a := [1 := 3, 2 := 10]
